# omnipath-build

./: .bumpversion.cfg  .coveragerc  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  Claude.md  Dockerfile  Makefile  README.md  RUFF_FIXES_TODO.md  analyze_id_coverage.py  analyze_inchikey_overlap.py  build_cv_terms.py  build_identifiers.py  build_provenance.py  build_references.py  build_sources.py  chebi_identifier_prefix_issue.md  cleaning_functions.py  docker-compose.postgres18.yml  docker-compose.yaml  duckdb_canonical_load_plan.md  duplicated_entity_identifiers_issue.md  flake.nix  foodon_mapping_plan.md  gold_loader.py  gold_loader_build_log.md  gold_transformation_plan.md  index.html  mkdocs.yml  new_schema_omnipath.md  objects.inv  package-lock.json  package.json  pnpm-lock.yaml  precommit_errors.txt  pypath_resources.txt  pyproject.toml  (+10 more)
about/: index.html
archive/: 3_gold_compounds.sql  build_entity_identifier.py  build_entity_identifier_duckdb.py  build_entity_identifier_new.py  cleaning_functions.py  ramp.yaml  silver_tables.yaml  transformation_functions.sql
archive_unused/: 7_indexes.sql  9_indexing.sql  build_entity_identifiers_simple.py  build_entity_identifiers_unionfind.py  gold_loader_build_log.md  plan.md  pypath_resources.txt
community/: index.html
config/: pkg_infra_quiet.yaml
custom_views/: liana.sql  metalinksdb.sql  metalinksdb_annotations.sql
deploy/: PROMOTE.md  promote-build.sh
docs/: PSI-MI_DATE_PARSING_ISSUE.md  about.md  annotation-resource-implementation-plan.md  annotation-resource-interface-brainstorm.md  annotation_term_table_plan.md  build-tuning.md  build_entities_remaining_optimization_task.md  chebi_integration_plan.md  columnar_inputs_takeover_plan.md  columnar_processing_design.md  current_data_journey.md  dag_freshness_incremental_implementation_spec.md  data_vs_data_old_equivalence_report.md  derive_optimization_idea.md  direct_postgres_pipeline_methods.md  direct_postgres_plan.md  docker-deployment.md  download_cache_manager_alignment_report.md  entity_schema_pipeline_resolver_change_summary.md  flat_silver_entity_extraction_experiment.md  gold_memory_safe_rewrite_plan.md  gold_pipeline_consolidation_plan.md  id_resolving_design_discussion.md  incremental_combined_outputs.md  incremental_combined_plan.md  incremental_delta_rollout_plan.md  incremental_update_plan.md  index.md  normalized_silver_pipeline_optimization_plan.md  omnipath_build_architecture_cleanup_handoff.md  ontology_dataset_cleanup_plan.md  ontology_entity_frontend_handoff.md  pipeline.md  pipeline_current_trace.md  pipeline_layered_rewrite_plan.md  pipeline_memory_safe_plan.md  pipeline_source_trace.md  postgres_combined_index_review.md  postgres_combined_schema_plan.md  postgres_search_migration_plan.md  (+26 more)
entity-service/: Cargo.toml  Readme.md  bench_lookup.py
entity-service/src/: main.rs
exploration/: analyze_id_coverage.py  analyze_inchikey_overlap.py  analyze_missing_structures.py  analyze_ramp_structures.py  analyze_swisslipids_duplicates.py  check_ramp_smiles_inchikey_mapping.py  check_ramp_sources.py  check_smiles_vs_inchikey.py  count_distinct_identifiers.py  explain_wildcard_multiplicity.py  polars_performance_test.py  ramp_different_connectivity_analysis.md  ramp_multiple_ids_root_cause_analysis.md  ramp_sources_analysis_report.md  smiles_inchikey_analysis_summary.md  test_unichem_enrichment.py
id_resolver/: README.md  __init__.py
installation/: index.html
meilisearch-importer-main/: Cargo.toml
minimal/: PLAN.md  __init__.py  bulk_ingest.py  canonicalize.py  cli.py  ingest.py  ontology_loader.py  source_rows.py
new/: ingest.py  init_db.py
new_loaders/: README.md  __init__.py  database_manager.py  gold_parquet_builder.py  gold_parquet_builder_v2.py  gold_parquet_builder_v3.py  gold_tables.py  source_processor.py  test.py  test_full_pipeline.py  test_gold_cv_terms.py  test_gold_entities.py  test_gold_entities_small.py  test_hmdb_silver.py  test_psimi_silver.py  test_transforms.py
next-omnipath/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
nextjs/: package.json  pnpm-lock.yaml
omnipath-present/: .env.example  .env.prod.example  .env.staging.example  Makefile  docker-compose.dev.yaml  docker-compose.yaml
omnipath-present/ontology-service/: Dockerfile  Dockerfile.prod  README.md  pyproject.toml
omnipath-present/ontology-service/ontology_service/: __init__.py  config.py  main.py  models.py  registry.py
omnipath-present/ontology-service/tests/: test_api.py
omnipath_build/: 0_database_manager.py  1_bronze_loader.py  2_silver_loader.py  3_gold_loader.py  4_augment_loader.py  README.md  __init__.py  _metadata.py  bronze_loader.py  chemical_fallback.py  chemical_resolution_level.py  cli.py  cv_terms.py  data_augmentation.py  database_manager.py  duckdb_direct_pipeline.py  duckdb_load.py  evidence_projector.py  gold_loader.py  gold_loader_new.py  gold_parquet_builder_v3.py  import_search_entities.py  meilisearch_settings.py  multigene_split.py  ontology_artifacts.py  parquet_duckdb.py  parquet_projector.py  postgres.py  postgres_combined.py  postgres_loader.py  postgres_new_combined.py  rdkit_computation_comparison.ipynb  relation_rules.py  resources.py  shared_interaction_schema.py  silver_loader.py  source_processor.py  test_full_pipeline.py
omnipath_build_new/: bronze_loader.py  database_manager.py  gold_parquet_builder_v3.py  gold_tables.py  test_full_pipeline.py
postgres/: Dockerfile
scripts/: apply_target_schema_identifier_mapping.py  import_search_entities.py  intact_10th_baseline.py  materialize_target_schema_mapping_tables.py  silver_to_target_schema.py  target_schema_entity_dedup.py  target_schema_pipeline.py
search/: search_index.json
sources/: hmdb_to_silver.py  psimi.py  run_hmdb_to_parquet.py  silver_loader.py  silver_schema.py  skip_bronze.py
tests/: README.md  conftest.py  test_build_manifest.py  test_chemical_fallback.py  test_chemical_resolution_level.py  test_classification.py  test_derive_completion.py  test_entity_labels.py  test_gene_anchor.py  (+17 more)
(+639 files in other folders)
