[package]
name = "entity-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.91"
arrow = "53.2.0"
axum = { version = "0.7.5", features = ["json"] }
parquet = { version = "53.2.0", features = ["arrow"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
rustc-hash = "2.0.0"

[dev-dependencies]
tempfile = "3.13.0"
