[project]
name = "ontology-service"
version = "0.1.0"
description = "REST API for querying biological ontologies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "ontograph",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",  # For testing async FastAPI
]

[tool.uv.sources]
ontograph = { path = "../../ontograph", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
